--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
 examples = [
     "ipykernel>=6.29.5",
     "matplotlib>=3.9.2",
+    "scipy>=1.14.1",
 ]
 plot = [
     "matplotlib>=3.9.2",
