--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,18 @@ extra_javascript:
 extra_css:
   - https://unpkg.com/katex@0/dist/katex.min.css
 
+extra:
+  analytics:
+    provider: google
+    property: G-ZZ204G4E2B
+  consent:
+    title: Cookie consent
+    description: >-
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
+
 nav:
   - Home: index.md
   - Elo as Logistic Regression: intro.md
