--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "numpy>=2.1.2",
-    "pandas>=2.2.3",
+    "narwhals>=1.14.0",
     "scikit-learn>=1.5.2",
 ]
 
@@ -17,6 +16,9 @@ dependencies = [
 examples = [
     "ipykernel>=6.29.5",
     "matplotlib>=3.9.2",
+    "numpy>=2.1.2",
+    "pandas>=2.2.3",
+    "polars>=1.14.0",
     "scipy>=1.14.1",
 ]
 plot = [
