feat: Make scikit-learn an optional dependency (#47)
As many use cases will not require full scikit-learn compatibility
and scikit-learn is sizeable dependency, we default to ratings
which are not fully scikit-learn compatible and have no dependency
on scikit-learn.

Fully scikit-learn compatible ratings systems are still offered
via the sklearn submodule and optional sklearn dependency group.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "narwhals>=1.14.0",
-    "scikit-learn>=1.5.2",
 ]
 
 [project.optional-dependencies]
@@ -23,6 +22,9 @@ examples = [
 ]
 plot = [
     "matplotlib>=3.9.2",
+]
+sklearn = [
+    "scikit-learn>=1.5.2",
 ]
 
 [build-system]
