--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,20 @@
 [project]
 name = "elo-grad"
-version = "0.4.1"
+version = "0.5.0"
 description = "Extended Elo rating system implementation exploiting the equivalence with logistic regression."
 authors = [
     {name = "Mike Cooke", email = "cookepm@tcd.ie"},
 ]
 readme = "README.md"
 requires-python = ">=3.10"
+classifiers = [
+    "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+]
 dependencies = [
     "narwhals>=1.14.0",
 ]
