docs: Add intercept in Poisson examples (#50)
It is natural to add an intercept term in the Poisson regression
examples to capture the basesline expected count.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ build-backend = "hatchling.build"
 
 [tool.uv]
 dev-dependencies = [
+    "jupytext>=1.16.4",
     "mkdocs-material>=9.5.42",
     "mkdocstrings-python>=1.12.2",
     "pre-commit>=4.0.1",
