--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "elo-grad"
 version = "0.5.0"
-description = "Extended Elo rating system implementation exploiting the equivalence with logistic regression."
+description = "Extended Elo rating system implementation based on the equivalence with logistic regression."
 authors = [
     {name = "Mike Cooke", email = "cookepm@tcd.ie"},
 ]
